react-frontend/src/index.css
/* ... */
    
     ::-webkit-input-placeholder,
     ::-moz-placeholder,
     :-moz-placeholder,
     :-ms-input-placeholder {
        color: #9a9a9a;
    }
    /**
 * Tables
 */
    
    table {
        border-collapse: collapse;
        border-spacing: 0;
        width: 100%;
        max-width: 100%;
    }
    
    thead th {
        font-family: Verdana;
        border-bottom: 2px solid #dedede;
    }
    
    tfoot th {
        border-top: 2px solid #dedede;
    }
    
    td {
        font-family: Verdana;
        border-bottom: 1px solid #dedede;
    }
    
    th,
    td {
        text-align: left;
        padding: 0.5rem;
    }
    
    h8 {
        font-size: 13px;
    }
    
    caption {
        padding: 1rem 0;
        caption-side: bottom;
        color: #ababab;
    }
    
    .striped-table tbody tr:nth-child(odd) {
        background-color: #f8f8f8;
    }
    
    .contain-table {
        overflow-x: auto;
    }
    
    @media (min-width: 600px) {
        .contain-table {
            width: 100%;
        }
    }
    /*
 * Navigation
 */
    /**
 * Layout
 */
    
    .button-editPopup {
        -webkit-appearance: none;
        border: 1px solid #ffe66d;
        border-radius: 4px;
        background: #ffe66d;
        color: #999999;
        font-weight: 600;
        font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
        font-size: 1rem;
        text-transform: none;
        padding: 0.75rem 1.25rem;
        margin: 0 0 0.5rem 0;
        vertical-align: middle;
        text-align: center;
        cursor: pointer;
        text-decoration: none;
        line-height: 1;
        width: 100%;
    }
    
    .button-editPopup:hover {
        border: 1px solid #ffe66d;
        background: #ffe66d;
        color: #ffffff;
        text-decoration: none;
    }
    
    .button-editPopup:focus,
    .button-editPopup:active {
        border: 1px solid #ffe66d;
        background: #ffe66d;
        color: #ffffff;
        text-decoration: none;
    }
    
    .button-deletePopup {
        -webkit-appearance: none;
        border: 1px solid #ff6b6b;
        border-radius: 4px;
        background: #ff6b6b;
        color: #ffffff;
        font-weight: 600;
        font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
        font-size: 1rem;
        text-transform: none;
        padding: 0.75rem 1.25rem;
        margin: 0 0 0.5rem 0;
        vertical-align: middle;
        text-align: center;
        cursor: pointer;
        text-decoration: none;
        line-height: 1;
        width: 100%;
    }
    
    .button-deletePopup:hover {
        border: 1px solid #ff6b6b;
        background: #ff6b6b;
        color: #999999;
        text-decoration: none;
    }
    
    .button-deletePopup:focus,
    .button-deletePopup:active {
        border: 1px solid #ff6b6b;
        background: #ff6b6b;
        color: #ffffff;
        text-decoration: none;
    }
    
    .sort-button {
        margin-right: 30px;
        float: right;
    }
    
    .sort-button2 {
        background: #ff6d6d;
        border: 1px solid #ff6d6d;
        color: #ffffff;
        display: block;
        float: right;
    }
    
    .sort-button2:hover {
        border: 1px solid #ff6b6b;
        background: #ff6b6b;
        color: #999999;
        text-decoration: none;
    }
    
    .sort-button2:focus,
    .sort-button2:active {
        border: 1px solid #ff6b6b;
        background: #ff6b6b;
        color: #ffffff;
        text-decoration: none;
    }
    
    .delete-completed-button {
        margin-left: 30px;
    }
    
    .topnav {
        overflow: hidden;
        background-color: #1a535c;
    }
    
    .logout {
        color: white;
        float: right;
        text-align: center;
        padding: 14px 16px;
        text-decoration: none;
        font-size: 17px;
    }
    
    .logout:hover {
        background-color: #ddd;
        color: #333;
    }
    
    .logout:active {
        background-color: #04aa6d;
        color: white;
    }
    
    .error_msg {
        color: red;
    }
    
    .error {
        border: 1px solid #eb516d
    }
    
    .error:hover {
        border: 1px solid #eb516d
    }
    
    .error:active {
        border: 1px solid #eb516d
    }
    
    .form-padding {
        padding-bottom: 15px;
    }
    
    tbody>tr>:nth-child(2) {
        white-space: normal;
        max-width: 250px;
        table-layout: fixed;
    }
    
    thead>tr>:nth-child(2) {
        column-width: 250px;
    }
    
    tbody>tr>:nth-child(4) {
        white-space: normal;
        max-width: 80px;
        table-layout: fixed;
    }
    
    tbody>tr>:nth-child(4) {
        white-space: normal;
        max-width: 120px;
        table-layout: fixed;
    }
    
    thead>tr>:nth-child(4) {
        column-width: 120px;
    }
    
    tbody>tr>:nth-child(5) {
        max-width: 60px;
    }
    
    .modal-open {
        overflow: hidden;
    }
    
    .modal {
        display: none;
        overflow: hidden;
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 1050;
        -webkit-overflow-scrolling: touch;
        outline: 0;
    }
    
    .modal.fade .modal-dialog {
        -webkit-transform: translate(0, -25%);
        -ms-transform: translate(0, -25%);
        -o-transform: translate(0, -25%);
        transform: translate(0, -25%);
        -webkit-transition: -webkit-transform 0.3s ease-out;
        -o-transition: -o-transform 0.3s ease-out;
        transition: transform 0.3s ease-out;
    }
    
    .modal.in .modal-dialog {
        -webkit-transform: translate(0, 0);
        -ms-transform: translate(0, 0);
        -o-transform: translate(0, 0);
        transform: translate(0, 0);
    }
    
    .modal-open .modal {
        overflow-x: hidden;
        overflow-y: auto;
    }
/* ... */

